Added code for google auth login, currently does not work

--- a/Roomate-app/public/login.html
+++ b/Roomate-app/public/login.html
@@ -1,11 +1,16 @@
 ﻿<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>JSTest</title>
+    <link href="css/default.css" rel="stylesheet" />
 </head>
 <body>
-
+    <form>
+        <button type="button" onclick="loginWithPopup()">Click to Login with Google</button>
+        <button type="button" onclick="loginWithRedirect()">Click to Login with Google</button>
+    </form>
+    <script src="login.js"></script>
 </body>
 </html>
+
