--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -1,21 +1,43 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <!--<meta charset="utf-8" />-->
-    <title>JSTest</title>
-    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="css/default.css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Welcome to Firebase Hosting</title>
+
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/6.3.4/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/6.3.4/firebase-auth.js"></script>
+    <script defer src="/__/firebase/6.3.4/firebase-database.js"></script>
+    <script defer src="/__/firebase/6.3.4/firebase-messaging.js"></script>
+    <script defer src="/__/firebase/6.3.4/firebase-storage.js"></script>
+    <!-- initialize the SDK after all desired features are loaded -->
+    <script defer src="/__/firebase/init.js"></script>
+
 </head>
-<body onload="initialize()">
-    <form>
-        <button type="button" onclick="loginWithPopup()">Click to Login with Google</button>
-        <button type="button" onclick="loginWithRedirect()">Click to Login with Google</button>
-    </form>
+<body>
+    <div id="message">
+        <h2>Welcome</h2>
+        <h1>Firebase Hosting Setup Complete</h1>
+        <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
+        <button type="button" onclick="login()">Login with Google</button>
+        <button type="button" onclick="redirLogin()">Redirect to Google</button>
+    </div>
+    <p id="load">Firebase SDK Loading&hellip;</p>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            try {
+                let app = firebase.app();
+                let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+                document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+            } catch (e) {
+                console.error(e);
+                document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
+            }
+        });
+    </script>
     <script src="./login.js"></script>
-    <script src="./config.js"></script>
 </body>
 </html>
-
