Added animate + bootstrap CSS, scrapped default index

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -1,9 +1,26 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- Meta Tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <!-- meta name="description" content="DESC" -->
+		<!-- meta name="author" content="COMPANY" -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+		<meta property="og:type" content="Website Applicaiton" />
+    <!-- meta property="og:title" content="Carmina Jean" / -->
+    <!-- meta property="og:description" content="DESC" / -->
+    <!-- meta property="og:url" content="URL" / -->
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./css/animate.css">
+    <link rel="stylesheet" type="text/css" href="./css/default.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
+    <!-- link rel="icon" href="IMG" -->
+
+    <title>CheckMates</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/6.3.4/firebase-app.js"></script>
@@ -17,14 +34,9 @@
 
 </head>
 <body>
-    <div id="message">
-        <h2>Welcome</h2>
-        <h1>Firebase Hosting Setup Complete</h1>
-        <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-        <button type="button" onclick="login()">Login with Google</button>
-        <button type="button" onclick="redirLogin()">Redirect to Google</button>
+    <div class="container test-border">
+      <h1>In West Philadelphia, born and raised...</h1>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
