--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -34,8 +34,29 @@
 
 </head>
 <body>
-    <div class="container test-border">
-      <h1>In West Philadelphia, born and raised...</h1>
+    <div class="container page">
+      <div class="home-items-container">
+        <div class="home-items">
+            <img class="home-items home-logo" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+            <!-- <h1>Keep your roommates in check ✔️</h1>
+            <h2>Keep your roommates in check ✔️</h2>
+            <h3>Keep your roommates in check ✔️</h3> -->
+
+            <br>
+
+            <p class="home-slogan">Keep your roommates in check ✔️</p>
+
+            <br><br>
+
+            <button class="login-btn" type="button" onclick="login()">
+              <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
+              Sign in with Google
+            </button>
+
+            <!-- <button type="button" onclick="login()">Login with Google</button> -->
+            <!-- <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
+        </div>
+      </div>
     </div>
 
     <script>
