Removed break tags in index

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Meta Tags -->
@@ -34,43 +34,44 @@
 
 </head>
 <body>
+  <div id="message">
     <div class="container page">
       <div class="home-items-container">
         <div class="home-items">
             <img class="home-items home-logo" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+
             <!-- <h1>Keep your roommates in check ✔️</h1>
             <h2>Keep your roommates in check ✔️</h2>
             <h3>Keep your roommates in check ✔️</h3> -->
 
-            <br>
-
             <p class="home-slogan">Keep your roommates in check ✔️</p>
-
-            <br><br>
 
             <button class="login-btn" type="button" onclick="login()">
               <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
               Sign in with Google
             </button>
 
-            <!-- <button type="button" onclick="login()">Login with Google</button> -->
-            <!-- <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
+            <!-- <button type="button" onclick="login()">Login with Google</button>
+            <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
         </div>
       </div>
     </div>
+  </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            try {
-                let app = firebase.app();
-                let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-                document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-            } catch (e) {
-                console.error(e);
-                document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-            }
-        });
-    </script>
-    <script src="./login.js"></script>
+  <p id="load">Firebase SDK Loading&hellip;</p>
+
+  <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          try {
+              let app = firebase.app();
+              let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+              document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+          } catch (e) {
+              console.error(e);
+              document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
+          }
+      });
+  </script>
+  <script src="./login.js"></script>
 </body>
 </html>
