Added pretty button and some animations

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -40,21 +40,23 @@
     <div class="container page">
       <div class="home-items-container">
         <div class="home-items">
-            <img class="home-items home-logo" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+            <img class="home-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
 
             <!-- <h1>Keep your roommates in check ✔️</h1>
             <h2>Keep your roommates in check ✔️</h2>
             <h3>Keep your roommates in check ✔️</h3> -->
 
-            <p class="home-slogan">Keep your roommates in check ✔️</p>
+            <p class="home-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
 
-            <!-- <button class="login-btn" type="button" onclick="login()">
-              <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
-              Sign in with Google
-            </button> -->
+            <button type="button" onclick="login()">
+              <div class="login-btn animated fadeInUp">
+                <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
+                Sign in with Google
+              </div>
+            </button>
 
-            <button type="button" onclick="login()">Login with Google</button>
-            <button type="button" onclick="redirLogin()">Redirect to Google</button>
+            <!-- <button type="button" onclick="login()">Login with Google</button>
+            <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
         </div>
       </div>
     </div>
