--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -62,7 +62,7 @@
     </div>
   </div>
 
-  <p id="load">Firebase SDK Loading&hellip;</p>
+  <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
 
   <script>
       document.addEventListener('DOMContentLoaded', function () {
