Removed test border for home items

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -39,7 +39,7 @@
   <div id="message">
     <div class="container page">
       <div class="home-items-container">
-        <div class="home-items test">
+        <div class="home-items">
             <img class="home-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
 
             <!-- <h1>Keep your roommates in check ✔️</h1>
