Added temp favcon Added variables for user name, email, photo

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -1,21 +1,23 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <!-- meta name="description" content="DESC" -->
-		<!-- meta name="author" content="COMPANY" -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- meta name="author" content="COMPANY" -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-		<meta property="og:type" content="Website Applicaiton" />
+    <meta property="og:type" content="Website Applicaiton" />
     <!-- meta property="og:title" content="Carmina Jean" / -->
     <!-- meta property="og:description" content="DESC" / -->
     <!-- meta property="og:url" content="URL" / -->
-
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./css/animate.css">
     <link rel="stylesheet" type="text/css" href="./css/default.css">
+
+    <!--favicon-->
+    <link rel="icon" href="./images/logo_Chck_m.png">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
     <!-- link rel="icon" href="IMG" -->
