Added class files

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -79,5 +79,8 @@
       });
   </script>
   <script src="./login.js"></script>
+    <script src="./config.js"</script>
+    <script src="./server.js"</script
+    <script src="./User.js"</script>
 </body>
 </html>
