--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -38,49 +38,45 @@
     <title>CheckMates</title>
 </head>
 <body>
-  <div id="message">
-    <div class="container page">
-      <div class="home-items-container">
-        <div class="home-items">
-            <img class="home-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+    <div id="message">
+        <div class="container page">
+            <div class="home-items-container">
+                <div class="home-items">
+                    <img class="home-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+                    <p class="home-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
 
-            <!-- <h1>Keep your roommates in check ✔️</h1>
-            <h2>Keep your roommates in check ✔️</h2>
-            <h3>Keep your roommates in check ✔️</h3> -->
+                    <button type="button" onclick="login()">
+                        <div class="login-btn animated fadeInUp">
+                            <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
+                            Sign in with Google
+                        </div>
+                    </button>
 
-            <p class="home-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
-
-            <button type="button" onclick="login()">
-              <div class="login-btn animated fadeInUp">
-                <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
-                Sign in with Google
-              </div>
-            </button>
-
-            <!-- <button type="button" onclick="login()">Login with Google</button>
-            <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
+                    <!-- <button type="button" onclick="login()">Login with Google</button>
+                    <button type="button" onclick="redirLogin()">Redirect to Google</button> -->
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
-  <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
+    <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
 
-  <script>
-      document.addEventListener('DOMContentLoaded', function () {
-          try {
-              let app = firebase.app();
-              let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-              document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-          } catch (e) {
-              console.error(e);
-              document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-          }
-      });
-  </script>
-  <script src="./login.js"></script>
-    <script src="./config.js"</script>
-    <script src="./server.js"</script
-    <script src="./User.js"</script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            try {
+                let app = firebase.app();
+                let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+                document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+            } catch (e) {
+                console.error(e);
+                document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
+            }
+        });
+    </script>
+    <script src="./login.js"></script>
+    <script src="./config.js"></script>
+    <script src="./User.js"></script>
+    <script src="./Space.js"></script>
+    <script src="./Task.js"></script>
 </body>
 </html>
