--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -25,6 +25,11 @@
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-auth.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/6.3.4/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
