Changed the User.js class to Mate.js class in the index.html. Changed some of the input forms in the profile.html.

--- a/Roomate-app/public/profile.html
+++ b/Roomate-app/public/profile.html
@@ -8,10 +8,10 @@
     
     <form>
         Full Name:<br>
-        <input type="text" name="firstname">
+        <input type="text">
         <br>
         Nick Name:<br>
-        <input type="text" name="lastname">
+        <input type="text">
     </form>
     
 </html>
