--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Meta Tags -->
@@ -80,7 +80,7 @@
     </script>
     <script src="./login.js"></script>
     <script src="./config.js"></script>
-    <script src="./User.js"></script>
+    <script src="./Mate.js"></script>
     <script src="./Space.js"></script>
     <script src="./Task.js"></script>
 </body>
