--- a/Roomate-app/public/overview.html
+++ b/Roomate-app/public/overview.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./login.js"></script>
     <script src="./config.js"></script>
+    <script defer src="/__/firebase/6.3.4/firebase-auth.js"></script>
 </head>
 <body onload="validate()">
     <button onclick="logout()">Logout</button>
