--- a/Roomate-app/public/profile.html
+++ b/Roomate-app/public/profile.html
@@ -8,7 +8,7 @@
         <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
-    <body onload="initialize()">
+    <body onload="initializeWelcome()">
         <h1>Input Nick Name</h1>
     
         <form>
