--- a/Roomate-app/public/createTask.html
+++ b/Roomate-app/public/createTask.html
@@ -45,16 +45,10 @@
                 <input type="text" id="descriptionField">
                 <br><br>
 
-                Due Date (DD/MM/YYYY):
+                Due By:
                 <br>
-                <input type="number" name="Day" min="1" max="31" id="dueDayField">
-                <input type="number" name="Month" min="1" max="12" id="dueMonthField">
-                <input type="number" name="Year" min="2019" max="2029" id="dueYearField">
-                <br><br>
-
-                Due Time (0000 to 2359):
-                <br>
-                <input type="number" name="Time" min="0" max="2359" id="dueTimeField">
+                <input type="date" name="dueDate" id="dueDateField">
+                <input type="time" name="dueTime"id="dueTimeField">
                 <br><br>
               </form>
               <button class="login-btn" type="button" onclick="createFirestoreTask()">Create Task</button>
