access firestore function works, now able to display name description and key of a specific space on spaceKey.html

--- a/Roomate-app/public/spaceKey.html
+++ b/Roomate-app/public/spaceKey.html
@@ -25,6 +25,7 @@
     <div class="home-items-container">
         <div class="home-items">
             <h3 id='showName'></h3>
+            <h3 id='showDescription'></h3>
             <p class="home-slogan animated fadeIn slow">Send this key to your mates so they can join your space:</p>
             <h3 id='showID'></h3>
         </div>
