Made subfolders and updated links

--- a/Roomate-app/public/html/createTask.html
+++ b/Roomate-app/public/html/createTask.html
@@ -12,12 +12,12 @@
     <!-- meta property="og:description" content="DESC" / -->
     <!-- meta property="og:url" content="URL" / -->
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./css/animate.css">
-    <link rel="stylesheet" type="text/css" href="./css/default.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../css/default.css">
 
     <!--favicon-->
-    <link rel="icon" href="./images/logo_Chck_m.png">
+    <link rel="icon" href="../images/logo_Chck_m.png">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
     <!-- link rel="icon" href="IMG" -->
@@ -58,10 +58,10 @@
 
     <!-- <p id="load">Firebase SDK Loading&hellip;</p> -->
 
-    <script src="./login.js"></script>
-    <script src="./config.js"></script>
-    <script src="./Mate.js"></script>
-    <script src="./Space.js"></script>
-    <script src="./Task.js"></script>
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/config.js"></script>
+    <script src="../scripts/Mate.js"></script>
+    <script src="../scripts/Space.js"></script>
+    <script src="../scripts/Task.js"></script>
 </body>
 </html>
