--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -5,10 +5,10 @@
 		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="./config.js"></script>
-		<script src="./login.js"></script>
-		<script src="./Space.js"></script>
-		<link rel="stylesheet" type="text/css" href="./css/joinOrCreatePage.css">
+		<script src="../scripts/config.js"></script>
+		<script src="../scripts/login.js"></script>
+		<script src="../scripts/Space.js"></script>
+		<link rel="stylesheet" type="text/css" href="../css/joinOrCreatePage.css">
 		
 	</head>
 	<body onload="initialize()">
