--- a/Roomate-app/public/html/spaceKey.html
+++ b/Roomate-app/public/html/spaceKey.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:type" content="Website Applicaiton" />
 
-    <link rel="icon" href="./images/logo_Chck_m.png">
+    <link rel="icon" href="../images/logo_Chck_m.png">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./css/animate.css">
-    <link rel="stylesheet" type="text/css" href="./css/default.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../css/default.css">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
 
@@ -31,11 +31,11 @@
         </div>
     </div>
 
-    <script src="./login.js"></script>
-    <script src="./config.js"></script>
-    <script src="./Mate.js"></script>
-    <script src="./Space.js"></script>
-    <script src="./Task.js"></script>
-    <script src="./spaceKey.js"></script>
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/config.js"></script>
+    <script src="../scripts/Mate.js"></script>
+    <script src="../scripts/Space.js"></script>
+    <script src="../scripts/Task.js"></script>
+    <script src="../scripts/spaceKey.js"></script>
 </body>
 </html>
