--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -12,12 +12,12 @@
     <!-- meta property="og:description" content="DESC" / -->
     <!-- meta property="og:url" content="URL" / -->
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./css/animate.css">
-    <link rel="stylesheet" type="text/css" href="./css/default.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../css/default.css">
 
     <!--favicon-->
-    <link rel="icon" href="./images/logo_Chck_m.png">
+    <link rel="icon" href="../images/logo_Chck_m.png">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,700|Raleway:300,400,400i,700&display=swap" rel="stylesheet">
     <!-- link rel="icon" href="IMG" -->
@@ -37,12 +37,12 @@
         <div class="container page">
             <div class="home-items-container">
                 <div class="home-items">
-                    <img class="home-items home-logo animated fadeIn faster" src="./images/logoCheckMates.png" alt="CheckMates Logo">
+                    <img class="home-items home-logo animated fadeIn faster" src="../images/logoCheckMates.png" alt="CheckMates Logo">
                     <p class="home-slogan animated fadeIn slow">Keep your roommates in check ✔️</p>
 
                     <button type="button" onclick="login()">
                         <div class="login-btn animated fadeInUp">
-                            <img class="login-btn-img" src="./images/logoGoogle.png" alt="Google Logo">
+                            <img class="login-btn-img" src="../images/logoGoogle.png" alt="Google Logo">
                             Sign in with Google
                         </div>
                     </button>
@@ -71,10 +71,10 @@
             }
         } );
     </script> -->
-    <script src="./login.js"></script>
-    <script src="./config.js"></script>
-    <script src="./Mate.js"></script>
-    <script src="./Space.js"></script>
-    <script src="./Task.js"></script>
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/config.js"></script>
+    <script src="../scripts/Mate.js"></script>
+    <script src="../scripts/Space.js"></script>
+    <script src="../scripts/Task.js"></script>
 </body>
 </html>
