--- a/Roomate-app/public/html/overview.html
+++ b/Roomate-app/public/html/overview.html
@@ -6,8 +6,8 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./login.js"></script>
-    <script src="./config.js"></script>
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/config.js"></script>
     <script defer src="/__/firebase/6.3.4/firebase-auth.js"></script>
 </head>
 <body onload="validate()">
