Fixed css for index.html

--- a/Roomate-app/public/index.html
+++ b/Roomate-app/public/index.html
@@ -12,9 +12,9 @@
     <!-- meta property="og:description" content="DESC" / -->
     <!-- meta property="og:url" content="URL" / -->
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../css/animate.css">
-    <link rel="stylesheet" type="text/css" href="../css/default.css">
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./css/animate.css">
+    <link rel="stylesheet" type="text/css" href="./css/default.css">
 
     <!--favicon-->
     <link rel="icon" href="../images/logo_Chck_m.png">
