Pulled before pushing

--- a/Roomate-app/public/html/joinOrCreateSpace.html
+++ b/Roomate-app/public/html/joinOrCreateSpace.html
@@ -8,6 +8,7 @@
 		<script src="../scripts/config.js"></script>
 		<script src="../scripts/login.js"></script>
 		<script src="../scripts/Space.js"></script>
+		<script src="../scripts/Mate.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/joinOrCreatePage.css">
 		
 	</head>
